--- a/views/add_movie.ejs
+++ b/views/add_movie.ejs
@@ -8,11 +8,11 @@
 
 <body>
     <form>
-        <input type="image" formaction="cart_summary.html" src="images/title/shopping_cart.png" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="images/title/exit.png" width="30" height="30" />
+        <input type="image" formaction="cart_summary.html" src="/images/icons/shopping_cart.png" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="/images/icons/exit.png" width="30" height="30" />
         <div class="contenedor">
-            <input type="image" formaction="movies.html" id="back" src="images/title/go_back.png" width="24" height="24"> 
-            <img src="images/title/new_movie.png" width="329" height="113"><br>        
+            <input type="image" formaction="movies.html" id="back" src="/images/icons/go_back.png" width="24" height="24"> 
+            <img src="/images/icons/new_movie.png" width="329" height="113"><br>        
     
             <article id=container1>
                 <form>
