--- a/views/client.ejs
+++ b/views/client.ejs
@@ -35,7 +35,7 @@
         <button id="container1">
         </button>
    
-        <form action="admin/customers/new" method="post">
+        <form action="/admin/customers/new" method="get">
            <button id="container2">
                 <h3>Add</h3>
                 <img src="/images/icons/add_customer.png" width="55" height="50">
@@ -44,7 +44,7 @@
      
         <br>
 
-        <form action="admin/customers/search" method="get">
+        <form action="/admin/customers/search" method="get">
             <button id="container3">
                 <h3>Search</h3>
                 <img src="/images/icons/search_icon.png" width="40" height="40">
