--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -15,7 +15,7 @@
     </form>    
 
     <article id=sideContainer>
-        <img src="images/title/retro_club.jpg" width="250" height="60"><br>
+        <img src="/images/icons/retro_club.jpg" width="250" height="60"><br>
         <input type="text" id="first" readonly><br>
         <input type="text" id="second" readonly><br>            
         <input type="text" id="third" readonly><br>            
@@ -23,11 +23,11 @@
 
     <article id=mainContainer>
         <form action="/admin/home" method="GET">
-            <input type="image" src="images/title/home.png" id="home" name="home" width="30" height="30"/><br>
+            <input type="image" src="/images/icons/home.png" id="home" name="home" width="30" height="30"/><br>
         </form>
         
         <center>
-            <img src="images/title/movies.png" width="307" height="99">
+            <img src="/images/icons/movies.png" width="307" height="99">
         </center>
      
         <article id="container0">
@@ -39,7 +39,7 @@
         <form action="admin/movies/new" method="GET">
             <button id="container2" name="container2">
                 <h3>Add</h3>
-                <img src="images/title/plus.png" width="55" height="50">
+                <img src="/images/icons/plus.png" width="55" height="50">
             </button>
         </form>
 
@@ -48,10 +48,10 @@
         <form action="/admin/movies/search" method="GET">
             <button id="container3" name="container3">
                 <h3>Search</h3>
-                <img src="images/title/search_icon.png" width="40" height="40">
-                <img src="images/title/eye.png" width="40" height="40">
-                <img src="images/title/pencil.png" width="40" height="40">
-                <img src="images/title/minus.png" width="40" height="40">
+                <img src="/images/icons/search_icon.png" width="40" height="40">
+                <img src="/images/icons/eye.png" width="40" height="40">
+                <img src="/images/icons/pencil.png" width="40" height="40">
+                <img src="/images/icons/minus.png" width="40" height="40">
             </button>
         </form>
        
