--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -15,7 +15,7 @@
     </form> 
 
     <article id=sideContainer>
-        <img src="/images/title/retro_club.jpg" width="250" height="60"><br>
+        <img src="//images/icons/retro_club.jpg" width="250" height="60"><br>
         <input type="text" id="first" readonly><br>
         <input type="text" id="second" readonly><br>            
         <input type="text" id="third" readonly><br>            
@@ -23,11 +23,11 @@
 
     <article id=mainContainer>
         <form action="/admin/home" method="GET">
-            <input type="image" src="/images/title/home.png" id="home" name="home" width="30" height="30"/><br>
+            <input type="image" src="//images/icons/home.png" id="home" name="home" width="30" height="30"/><br>
         </form>
 
         <center>
-            <img src="/images/title/rules.png" width="307" height="99">
+            <img src="//images/icons/rules.png" width="307" height="99">
         </center>
         
         <article id="container1">
