--- a/views/edit_client.ejs
+++ b/views/edit_client.ejs
@@ -8,17 +8,17 @@
 <body>
 
     <form id="header">
-        <input type="image" formaction="cart_summary.html" src="images/title/shopping_cart.png" id="shopping" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="images/title/exit.png" id="exit" width="30" height="30" />
+        <input type="image" formaction="cart_summary.html" src="/images/icons/shopping_cart.png" id="shopping" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="/images/icons/exit.png" id="exit" width="30" height="30" />
     </form>
 
     <div class="contenedor">
         <form>
-            <input type="image" formaction="client.html" src="images/title/go_back.png" id="back" width="30" height="30"/>    
+            <input type="image" formaction="client.html" src="/images/icons/go_back.png" id="back" width="30" height="30"/>    
         </form>
 
         <center>
-            <img src="images/title/edit_client.png" width="250" height="90">        
+            <img src="/images/icons/edit_client.png" width="250" height="90">        
         </center>
 
         <form>
