--- a/views/loans.ejs
+++ b/views/loans.ejs
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="loans.css">
+<link rel="stylesheet" href="/css/loans.css">
 <title>Loan</title>
 </head>
 <body>
     <form id="header" action="/admin/cart" method="get">
-        <input type="image" src="images/titles/shopping_cart.png" width="30" height="30" />
+        <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
     </form>    
 
     <form id="header" action="/logout" method="post">
-        <input type="image" src="images/titles/exit.png" width="30" height="30" />
+        <input type="image" src="/images/icons/exit.png" width="30" height="30" />
     </form>    
 
     <article id=sideContainer>
-        <img src="images/title/retro_club.jpg" width="250" height="60"><br>
+        <img src="/images/titles/retro_club.jpg" width="250" height="60"><br>
         <input type="text" id="first" readonly><br>
         <input type="text" id="second" readonly><br>            
         <input type="text" id="third" readonly><br>            
     </article> 
 
     <article id=mainContainer>
-        <form>
-            <input type="image" formaction="shortcuts.html" src="images/title/home.png" id="home" width="30" height="30"/><br>
+        <form action="/admin/home" method="get">
+            <input type="image" src="/images/icons/home.png" id="home" name="home" width="30" height="30"/><br>
+        </form>
+
+        <form action="/admin/loan/search" method="get">
 
             <center>
-                <img src="images/title/loans.png" width="300" height="105">
+                <img src="/images/titles/loans.png" width="300" height="105">
             </center>
     
             <article id="container0">
             </article>
         
-            <button id="container1" formaction="search_loans.html">
+            <button id="container1">
                 <h3>Consult-Search-View</h3>
-                <img src="images/title/search_icon.png" width="40px" height="40px">
-                <img src="images/title/document.png" width="40px" height="40px">
-                <img src="images/title/eye.png" width="40px" height="40px">
+                <img src="/images/icons/search_icon.png" width="40px" height="40px">
+                <img src="/images/icons/document.png" width="40px" height="40px">
+                <img src="/images/icons/eye.png" width="40px" height="40px">
             </button>
             
             <br>
