loan and movie views connected

--- a/views/add_movie.ejs
+++ b/views/add_movie.ejs
@@ -3,15 +3,24 @@
 <head>
     <title>New Movie</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="add_movie.css" type="text/css">
+    <link rel="stylesheet" href="/css/add_movie.css" type="text/css">
 </head>
 
 <body>
     <form>
-        <input type="image" formaction="cart_summary.html" src="/images/icons/shopping_cart.png" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="/images/icons/exit.png" width="30" height="30" />
+        <form id="header1" name="header1" action="/admin/cart" method="get">
+            <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
+        </form>    
+    
+        <form id="header2" name="header2" action="/logout" method="post">
+            <input type="image" src="/images/icons/exit.png" width="30" height="30" />
+        </form>  
+
         <div class="contenedor">
-            <input type="image" formaction="movies.html" id="back" src="/images/icons/go_back.png" width="24" height="24"> 
+            <form id="header2" name="header2" action="/admin/movies" method="get">
+                <input type="image"id="back" src="/images/icons/go_back.png" width="24" height="24"> 
+            </form>  
+            
             <img src="/images/icons/new_movie.png" width="329" height="113"><br>        
     
             <article id=container1>
