--- a/views/loans.ejs
+++ b/views/loans.ejs
@@ -25,7 +25,7 @@
             <input type="image" src="/images/icons/home.png" id="home" name="home" width="30" height="30"/><br>
         </form>
 
-        <form action="/admin/loan/search" method="get">
+        <form action="/admin/loans/search" method="get">
 
             <center>
                 <img src="/images/titles/loans.png" width="300" height="105">
