--- a/views/search_loans.ejs
+++ b/views/search_loans.ejs
@@ -15,7 +15,7 @@
     </form>    
 
     <div class="contenedor" action="/admin/loan" method="get">
-        <form action="/admin/loan" method="get">
+        <form action="/admin/loans" method="get">
             <input type="image" id="back" src="/images/icons/go_back.png" width="24" height="24"> 
         </form>
 
