--- a/views/shortcuts.ejs
+++ b/views/shortcuts.ejs
@@ -41,7 +41,7 @@
             </button>
         </form>
 
-        <form action="/admin/loan" method="get">
+        <form action="/admin/loans" method="get">
             <button id="container2" name="container2">
                 <h3>Loans</h3>
                 <img src="/images/icons/loan.png" width="60" height="60">
