--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="/public/css/movies.css">
+<link rel="stylesheet" href="/css/movies.css">
     <title>Movies</title>
 </head>
 <body>
 
-   <form id="header1" name="header1" action="/admin/cart" method="GET">
-        <input type="image" src="images/icons/shopping_cart.png" width="30" height="30" />
+    <form id="header1" name="header1" action="/admin/cart" method="get">
+        <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
     </form>    
 
     <form id="header2" name="header2" action="/logout" method="post">
-        <input type="image" src="images/icons/exit.png" width="30" height="30" />
-    </form>    
+        <input type="image" src="/images/icons/exit.png" width="30" height="30" />
+    </form>   
 
     <article id=sideContainer>
-        <img src="/images/icons/retro_club.jpg" width="250" height="60"><br>
+        <img src="/images/titles/retro_club.jpg" width="250" height="60"><br>
         <input type="text" id="first" readonly><br>
         <input type="text" id="second" readonly><br>            
         <input type="text" id="third" readonly><br>            
@@ -27,7 +27,7 @@
         </form>
         
         <center>
-            <img src="/images/icons/movies.png" width="307" height="99">
+            <img src="/images/titles/movies.png" width="307" height="99">
         </center>
      
         <article id="container0">
@@ -36,7 +36,7 @@
         <article id="container1">
         </article>
     
-        <form action="admin/movies/new" method="GET">
+        <form action="/admin/movies/new" method="GET">
             <button id="container2" name="container2">
                 <h3>Add</h3>
                 <img src="/images/icons/plus.png" width="55" height="50">
