--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,8 +1,17 @@
-<%- include('includes/head.ejs') %>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="/css/404.css">
+    <title>Not Found</title>
 </head>
-
 <body>
-    <%- include('includes/navigation.ejs') %>
-    <h1>Page Not Found!</h1>
-
-<%- include('includes/end.ejs') %>
+    <div>
+        <img src="/images/titles/404_msg.png" width="250" height="60">
+        <a href="/login">
+            <img src="/images/titles/404_click.png" width="250" height="60">
+        </a>
+        
+    </div>
+    
+</body>
+</html>
