--- a/views/add_movie.ejs
+++ b/views/add_movie.ejs
@@ -4,6 +4,7 @@
     <title>New Movie</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/add_movie.css" type="text/css">
+    <title>Movies</title>
 </head>
 
 <body>
