--- a/views/cart_summary.ejs
+++ b/views/cart_summary.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 <link rel="stylesheet" href="/css/cart_summary.css">
-<title>Shortcuts</title>
+<title>Summary</title>
 </head>
 <body>
     <form name="header" action="/admin/cart" method="get">
