--- a/views/edit_client.ejs
+++ b/views/edit_client.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="edit_client.css" type="text/css">
+    <title>Client</title>
 </head>
 
 <body>
