--- a/views/loans.ejs
+++ b/views/loans.ejs
@@ -5,11 +5,11 @@
 <title>Loan</title>
 </head>
 <body>
-    <form id="header" action="/admin/cart" method="get">
+    <form id="header1" name="header1" action="/admin/cart" method="get">
         <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
     </form>    
 
-    <form id="header" action="/logout" method="post">
+    <form id="header2" name="header2" action="/logout" method="post">
         <input type="image" src="/images/icons/exit.png" width="30" height="30" />
     </form>    
 
@@ -21,14 +21,14 @@
     </article> 
 
     <article id=mainContainer>
-        <form action="/admin/home" method="get">
+        <form action="/admin/home" method="GET">
             <input type="image" src="/images/icons/home.png" id="home" name="home" width="30" height="30"/><br>
         </form>
 
         <form action="/admin/loans/search" method="get">
 
             <center>
-                <img src="/images/titles/loans.png" width="300" height="105">
+                <img src="/images/titles/loans.png" width="350" height="130">
             </center>
     
             <article id="container0">
