--- a/public/css/cart_summary.css
+++ b/public/css/cart_summary.css
@@ -10,63 +10,84 @@ body{
     font-family: BalsamiqSansBold;
 }
 
-#mainContainer{
-    width: 800px;
-    height: 475px;
-    margin-top: 150px;
-    margin-left: 390px;
-    background-color: #30323d;
-    border-style: solid;
-    border-color: #f2edbe;
+#header1{
+    margin-left: 1400px;
+    margin-top: 30px;
 }
 
-#header{
+#header2{
     margin-left: 1400px;
-    margin-right: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #home{
     margin: 10px;
 }
 
+#mainContainer{
+    width: 900px;
+    height: 500px;
+    margin-top: 40px;
+    margin-left: 330px;
+    background-color: #30323d;
+    opacity: 85%;
+    border-style: solid;
+    border-color: #f2edbe;
+}
+
 #column1{
-    margin-left: 40px;
-    margin-right: 30px;
     float:left; width:50%;
+    width: 380px;
     height: 261px;
+    margin-left: 40px;
     background:#23395b;
     text-align:left;
     border-style: solid;
     border-color: black;
+    font-size: 13px;
+    box-shadow: 5px 10px;
+    font-family: BalsamiqSansBold;
 }
 
 #column2{
-    float:left; width:35%;
+    float:left; width:50%;
+    width: 300px;
     height: 261px;
+    margin-left: 40px;
     background:#30323d;
-	text-align:left;
+    text-align:left;
+}
+
+h3{
+    text-align: center;
+    color: white;
+    text-decoration: underline;
 }
 
 #item{
-    width: 305px;
+    width: 290px;
     height: 17px;
+    margin-left: 10px;
     background-color: #f2edbe;
     border-style: solid;
     border-color: black;
     color:black;
-    margin-left: 10px;
+    font-size: 13px;
+    box-shadow: 5px 5px;
+    font-family: BalsamiqSansBold;
 }
 
 #customer_id{
+    width: 270px;
+    height: 22px;    
     background-color: #aa4465;    
     color: white;
     border-style: solid;
     border-color: black;
-    width: 270px;
-    height: 22px;    
-    margin-bottom: 10px;
-    padding: 5px;
+    font-size: 13px;
+    padding-left: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #days{
@@ -74,8 +95,16 @@ body{
     color: black;
     border-style: solid;
     border-color: black;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 13px;
     padding: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
+}
+
+select{
+    width: 276px;
+    height: 29px;
 }
 
 #pre_total{
@@ -85,8 +114,11 @@ body{
     color: white;
     border-style: solid;
     border-color: black;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 13px;
     padding: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #pre_total_bs{
@@ -96,8 +128,11 @@ body{
     color: black;
     border-style: solid;
     border-color: black;
-    margin-bottom: 10px;
-    padding: 5px;
+    margin-top: 10px;
+    font-size: 13px;
+    padding-left: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #discount{
@@ -107,8 +142,11 @@ body{
     color: white;
     border-style: solid;
     border-color: black;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 13px;
     padding: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #discount_p{
@@ -118,8 +156,11 @@ body{
     color: black;
     border-style: solid;
     border-color: black;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 13px;
     padding: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #discount_bs{
@@ -129,8 +170,11 @@ body{
     color: black;
     border-style: solid;
     border-color: black;    
-    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 13px;
     padding: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #total{
@@ -140,8 +184,11 @@ body{
     color: white;
     border-style: solid;
     border-color: black;    
-    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 13px;
     padding: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #total_bs{
@@ -151,28 +198,23 @@ body{
     color: white;
     border-style: solid;
     border-color: black;    
-    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 13px;
     padding: 5px;
-}
-
-select{
-    width: 276px;
-    height: 29px;
-    border-style: solid;
-    border-color: black;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 button{
     width: 280px;
-    height: 40px;
+    height: 56px;
     color: white;
     border-style: solid;
     border-color: black;    
     background-color: #3d9796;
-}
-
-h3{
-    text-align: center;
-    color: white;
-    text-decoration: underline;
+    margin-top: 10px;
+    font-size: 13px;
+    padding-left: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
