--- a/public/css/client.css
+++ b/public/css/client.css
@@ -11,10 +11,10 @@ body{
 }
 
 #sideContainer{
-    margin-top: 200px;
-    margin-right: 70px;
     float:left; width:40%;
     text-align: right;
+    margin-top: 150px;
+    margin-right: 50px;
 }
 
 #first{
@@ -55,24 +55,21 @@ body{
 }
 
 #mainContainer{
-    margin-top: 100px;
+    float:left; width:60%;
+    width: 600px;
+    height: 580px;
     background-color: #30323d;
-    border-style: solid;
-	float:left; width:40%;
-    height: 550px;
     opacity: 85%;
 }
 
 #header1{
     margin-left: 1400px;
-    margin-right: 10px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 #header2{
     margin-left: 1400px;
-    margin-right: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #home{
@@ -80,64 +77,77 @@ body{
 }
 
 #container0{
-    margin-bottom: 20px;
-    margin-left: 40px;
-    float:left; width:25%;
+    float:left; width:30%;
+    width: 130px;
     height: 117px;
-	background:#30323d;
+    margin-left: 50px;
+    margin-bottom: 20px;
     text-align:left;
+	background:#30323d;
     opacity: 85%;
 }
 
 #container1{
-    margin-left: 30px;
-    float:left; width:25%;
+    float:left; width:30%;
+    width: 130px;
     height: 117px;
+    margin-left: 40px;
+    margin-bottom: 20px;
     background:#eafdf8;
     border-style: solid;
     border-color: black;
     text-align:left;
     color:black;
     font-size: 13px;
+    font-size: 13px;
+    box-shadow: 5px 10px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #container2{
-    margin-left: 30px;
-    margin-bottom: 20px;
-    float:left; width:25%;
+    float:left; width:30%;
+    width: 130px;
     height: 117px;
+    margin-left: 50px;
+    margin-bottom: 20px;
 	background:#30323d;
     text-align:left;
     border-style: solid;
     border-color: black;
     color:white;
+    font-size: 13px;
+    box-shadow: 5px 10px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #container3{
-    margin-left: 40px;
-    float:left; width:47%;
+    float:left; width:50%;
+    width: 290px;
     height: 117px;
+    margin-left: 60px;
+    margin-top: 20px;
 	background:#3d9796;
     text-align:left;
     color:white;
     border-style: solid;
     border-color: black;
-    margin-left: 90px;
+    font-size: 13px;
+    box-shadow: 5px 10px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #container4{
-    margin-left: 30px;
-    float:left; width:25%;
+    float:left; width:30%;
+    width: 130px;
     height: 117px;
+    margin-left: 50px;
+    margin-top: 20px;
 	background:#aa4465;
     text-align:left;
     color:white;
     border-style: solid;
     border-color: black;
+    font-size: 13px;
+    box-shadow: 5px 10px #000000;
+    font-family: BalsamiqSansBold;
 }
-
-
-
-
-
-
