--- a/views/client.ejs
+++ b/views/client.ejs
@@ -5,11 +5,11 @@
 <title>Client</title>
 </head>
 <body>
-    <form name="header" action="/admin/cart" method="get">
+    <form id="header1" name="header1" action="/admin/cart" method="get">
         <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
     </form>    
 
-    <form name="header" action="/logout" method="post">
+    <form id="header2" name="header2" action="/logout" method="post">
         <input type="image" src="/images/icons/exit.png" width="30" height="30" />
     </form>    
 
@@ -21,12 +21,12 @@
     </article> 
 
     <article id=mainContainer>
-        <form action="/admin/home" method="get">
-            <input type="image" src="/images/icons/home.png" id="home" width="30" height="30"/><br>
+        <form action="/admin/home" method="GET">
+            <input type="image" src="/images/icons/home.png" id="home" name="home" width="30" height="30"/><br>
         </form>
 
         <center>
-            <img src="/images/titles/customers.png" width="210" height="105">
+            <img src="/images/titles/customers.png" width="250" height="130">
         </center>
     
         <article id="container0">
