--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -5,14 +5,13 @@
     <title>Rules</title>
 </head>
 <body>
-
-    <form id="header1" name="header1" action="/admin/cart" method="GET">
+    <form id="header1" name="header1" action="/admin/cart" method="get">
         <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
     </form>    
 
     <form id="header2" name="header2" action="/logout" method="post">
         <input type="image" src="/images/icons/exit.png" width="30" height="30" />
-    </form> 
+    </form>    
 
     <article id=sideContainer>
         <img src="/images/titles/retro_club.jpg" width="250" height="60"><br>
@@ -27,11 +26,11 @@
         </form>
 
         <center>
-            <img src="/images/titles/rules.png" width="307" height="99">
+            <img src="/images/titles/rules.png" width="350" height="130">
         </center>
         
         <article id="container1">
-            <h3>Discount policies</h3>
+            <p>Discount policies</p>
             <form action="" method="POST">
                 <select id="options" name="options">
                     <option value="">options</option>
@@ -45,6 +44,8 @@
                 <p>Discount:</p>
             </article>
 
+            <br>
+            <br>
             <br>
 
             <form action="" method="POST">
